Added app name to login page

--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,7 @@ FIREBASE_SETUP.md
 DEPLOYMENT.md
 .env.example
 CURRENCY_FEATURE.md
-PROJECT_REPORT.md
+DEMO_GUIDE.md
+DEMO_CHECKLIST.md
+PRESENTATION_SLIDES.md
+SLIDE_SETUP_GUIDE.md
